--- a/index.html
+++ b/index.html
@@ -1,190 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-<meta charset="UTF-8">
-<title>Happy Birthday 🎂</title>
+  <meta charset="UTF-8">
+  <title>Happy Birthday!</title>
+  <link rel="stylesheet" href="./style.css">
+<script src="https://public.codepenassets.com/js/prefixfree-1.0.7.min.js"></script>
 
-<style>
-    body{
-        margin:0;
-        padding:0;
-        overflow:hidden;
-        background:linear-gradient(45deg,#ff4e50,#f9d423);
-        font-family: "Poppins", sans-serif;
-        text-align:center;
-        color:white;
-    }
-
-    h1{
-        margin-top:60px;
-        font-size:60px;
-        animation: pop 1.5s infinite;
-    }
-
-    @keyframes pop{
-        0%{transform:scale(1);}
-        50%{transform:scale(1.2);}
-        100%{transform:scale(1);}
-    }
-
-    p{
-        font-size:22px;
-    }
-
-    button{
-        padding:12px 25px;
-        border:none;
-        border-radius:30px;
-        font-size:18px;
-        cursor:pointer;
-        background:white;
-        color:#ff4e50;
-        margin-top:20px;
-    }
-
-    canvas{
-        position:fixed;
-        top:0;
-        left:0;
-    }
-
-    #gift{
-        position:fixed;
-        top:50%;
-        left:50%;
-        transform:translate(-50%,-50%) scale(0);
-        width:350px;
-        background:white;
-        color:#ff4e50;
-        padding:30px;
-        text-align:center;
-        border-radius:20px;
-        box-shadow:0 0 25px rgba(0,0,0,0.6);
-        transition:0.4s;
-    }
-
-    #gift img{
-        width:230px;
-        animation: pop 1.5s infinite;
-    }
-
-    #close{
-        margin-top:15px;
-        padding:8px 20px;
-        border:none;
-        border-radius:20px;
-        background:#ff4e50;
-        color:white;
-        cursor:pointer;
-    }
-</style>
 </head>
-
 <body>
-
-<canvas id="confetti"></canvas>
-
-<h1>🎉 Happy Birthday 🎉</h1>
-<p>May your day be filled with happiness, love and joy!</p>
-
-<button onclick="showWish()">Click for Surprise 🎁</button>
-
-<!-- BACKGROUND MUSIC -->
-<audio id="music" loop>
- <source src="https://www.dropbox.com/s/4o6k1m7y6z0q7v3/happy-birthday-song.mp3?raw=1" type="audio/mp3">
-</audio>
-
-<!-- Surprise Gift -->
-<div id="gift">
-    <h2 id="wishText"></h2>
-    <p id="message"></p>
-
-    <img src="https://i.postimg.cc/9fYt8F2B/gift.gif">
-
-    <br>
-    <button id="close" onclick="closeGift()">Close</button>
-</div>
-
-<script>
-
-// ===== SURPRISE + MUSIC =====
-function showWish(){
-    // play music
-    document.getElementById("music").play();
-
-    let name = prompt("Enter Birthday Person Name 🎂:");
-    if(!name) name = "Dear Friend";
-
-    const wishes = [
-        "May your life be filled with happiness, success and blessings!",
-        "Have a magical birthday full of joy and laughter!",
-        "Wishing you endless smiles and unforgettable moments!",
-        "May all your dreams come true! Stay blessed!",
-        "Another year older, another year wiser — happy birthday!"
-    ];
-
-    let randomWish = wishes[Math.floor(Math.random()*wishes.length)];
-
-    document.getElementById("wishText").innerHTML = "🎂 Happy Birthday " + name + " 🎂";
-    document.getElementById("message").innerHTML = randomWish;
-
-    document.getElementById("gift").style.transform="translate(-50%,-50%) scale(1)";
-}
-
-function closeGift(){
-    document.getElementById("gift").style.transform="translate(-50%,-50%) scale(0)";
-}
-
-
-
-// ===== CONFETTI =====
-const canvas=document.getElementById("confetti");
-const ctx=canvas.getContext("2d");
-let W=canvas.width=window.innerWidth;
-let H=canvas.height=window.innerHeight;
-
-const confetti=[];
-for(let i=0;i<200;i++){
-    confetti.push({
-        x:Math.random()*W,
-        y:Math.random()*H,
-        r:Math.random()*6+2,
-        d:Math.random()*50
-    })
-}
-
-function draw(){
-    ctx.clearRect(0,0,W,H);
-    ctx.fillStyle="white";
-    ctx.beginPath();
-    confetti.forEach((c)=>{
-        ctx.moveTo(c.x,c.y);
-        ctx.arc(c.x,c.y,c.r,0,Math.PI*2,true);
-    });
-    ctx.fill();
-    update();
-}
-
-let angle=0;
-function update(){
-    angle+=0.01;
-    confetti.forEach((c,i)=>{
-        c.y += Math.cos(angle+c.d)+1+c.r/2;
-        c.x += Math.sin(angle);
-        if(c.y>H){
-            confetti[i]={x:Math.random()*W,y:-10,r:c.r,d:c.d};
-        }
-    });
-}
-
-setInterval(draw,20);
-
-window.onresize=()=>{
-    W=canvas.width=window.innerWidth;
-    H=canvas.height=window.innerHeight;
-};
-</script>
+<canvas id=c></canvas>
+  <script  src="./script.js"></script>
 
 </body>
 </html>
-
